--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
   }
   body{
     background-color: #b8c6db;
-    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7f7 100%);
+    background-image: linear-gradient(315deg, #0056d6 0%, #f5f7f7 100%);
     font-family: 'Poppins', sans-serif;
     display: flex;
     align-items: center;
@@ -13,7 +13,7 @@
     margin: 0;
   }
   .quiz-container{
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
     width: 600px;
@@ -40,7 +40,7 @@
     cursor: pointer;
   }
   button{
-    background-color: #03cae4;
+    background-color: #e40303;
     color: #fff;
     border: none;
     display: block;
@@ -51,9 +51,9 @@
     padding: 1.3rem;
   }
   button:hover{
-    background-color: #04adc4;
+    background-color: #00ff15;
   }
   button:focus{
     outline: none;
-    background-color: #44b927;
+    background-color: #b427b9;
   }
