added timer to code quiz via javascript

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,3 +57,9 @@
     outline: none;
     background-color: #b427b9;
   }
+
+  #timer{
+    text-align: center;
+    width: fit-content;
+    margin: auto;
+  }
